# gavhariweb

./: .env  .gitignore  Cargo.toml
apps/backend/: Cargo.toml  diesel.toml
apps/backend/migrations/2026-01-28-133959-0000_projects/: up.sql
apps/backend/src/: lib.rs  main.rs  routes.rs  schema.rs
apps/backend/src/common/: error.rs  mod.rs  response.rs  types.rs
apps/backend/src/config/: mod.rs  settings.rs
apps/backend/src/db/: mod.rs  query_helper.rs
apps/backend/src/modules/: mod.rs
apps/backend/src/modules/home/: dto.rs  handler.rs  mod.rs  service.rs
apps/backend/src/modules/projects/: dto.rs  handler.rs  mod.rs  repo.rs  route.rs  service.rs
apps/frontend/: Cargo.toml  index.html  input.css  output.css  setup_daisyui.md
apps/frontend/assets/: content.yaml
apps/frontend/src/: app.rs  content.rs  main.rs  routes.rs
apps/frontend/src/components/: mod.rs
apps/frontend/src/components/layout/: footer.rs  mod.rs  navbar.rs  not_found.rs
apps/frontend/src/components/sections/: hero.rs  mod.rs
apps/frontend/src/pages/: mod.rs
apps/frontend/src/pages/home/: mod.rs  page.rs
apps/frontend/src/pages/home/sections/: cta.rs  hero.rs  mod.rs  projects.rs  stats.rs  tech_stack.rs  value_props.rs
apps/frontend/src/pages/projects/: mod.rs  page.rs
apps/frontend/src/pages/projects/sections/: case_study.rs  filter.rs  footer_cta.rs  grid.rs  hero.rs  mod.rs
crates/dto/: Cargo.toml
docs/: color-palette.md
